src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>GC1000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3000 series</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ASMO_OSC_Emb_IOT_Maker_Community_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>ASMO OSC Emb IOT Maker Community</label>
        <queue>ASMO_OSC_Emb_IOT_Maker_Community</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>CORE_ASMO_OSC_VSC_LAR_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>ASMO OSC VSC LAR</label>
        <queue>CORE_ASMO_OSC_VSC_LAR</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CORE_ASMO_OSC_VSC_NAR_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>ASMO OSC VSC NAR</label>
        <queue>CORE_ASMO_OSC_VSC_NAR</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Core_ALL_GLOBAL_Catch_All_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>ALL GLOBAL (Catch All)</label>
        <queue>Core_ALL_GLOBAL_Catch_All</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Core_APAC_OSC_ANZ_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>APAC OSC - ANZ</label>
        <queue>Core_APAC_OSC_ANZ</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Core_APAC_OSC_Chinese_NCS_MQL_and_Prospect_Assessment_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>APAC OSC - Chinese - NCS - MQL and Prosp</label>
        <queue>Core_APAC_OSC_Chinese_NCS_MQL_and_Prospect_Assessment</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Core_APAC_OSC_Chinese_NCS_SAL_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>APAC OSC - Chinese - NCS - SAL</label>
        <queue>Core_APAC_OSC_Chinese_NCS_SAL</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Core_APAC_OSC_Chinese_Sykes_U_PA_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>APAC OSC - Chinese - Sykes - U&amp;PA</label>
        <queue>Core_APAC_OSC_Chinese_Sykes_U_PA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Core_APAC_OSC_English_GPS_MQL_and_Prospect_Assessment_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>APAC OSC - English - GPS - MQL and Prosp</label>
        <queue>Core_APAC_OSC_English_GPS_MQL_and_Prospect_Assessment</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Core_APAC_OSC_English_NCS_SAL_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>APAC OSC - English - NCS - SAL</label>
        <queue>Core_APAC_OSC_English_NCS_SAL</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Core_APAC_OSC_English_NCS_U_PA_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>APAC OSC - English - NCS - U&amp;PA</label>
        <queue>Core_APAC_OSC_English_NCS_U_PA</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Core_APAC_OSC_India_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>APAC OSC - India</label>
        <queue>Core_APAC_OSC_India</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Core_APAC_OSC_Indo_Sykes_MQL_and_Prospect_Assessment_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>APAC OSC - Indo - Sykes- MQL and Prospec</label>
        <queue>Core_APAC_OSC_Indo_Sykes_MQL_and_Prospect_Assessment</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Core_APAC_OSC_Indo_Sykes_SAL_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>APAC OSC - Indo - Sykes- SAL</label>
        <queue>Core_APAC_OSC_Indo_Sykes_SAL</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>